// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Tests for component snapshots Link matches home snapshot 1`] = `
<a
  href="/"
  onClick={[Function]}
/>
`;

exports[`Unit Tests for component snapshots Link matches login snapshot 1`] = `
<a
  href="/login"
  onClick={[Function]}
/>
`;

exports[`Unit Tests for component snapshots Link matches profile snapshot 1`] = `
<a
  href="/profile"
  onClick={[Function]}
/>
`;

exports[`Unit Tests for component snapshots shallow render 1`] = `
<nav>
  <ul>
    <li>
      <Link
        to="/"
      >
        Register
      </Link>
    </li>
    <li>
      <Link
        to="/login"
      >
        Log In
      </Link>
    </li>
    <li>
      <Link
        to="/profile"
      >
        Profile
      </Link>
    </li>
  </ul>
</nav>
`;
